[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/pauseBars.png" type="Texture" id=1]
[ext_resource path="res://UI/Pause/pause.gd" type="Script" id=2]
[ext_resource path="res://assets/pauseMenu.png" type="Texture" id=3]
[ext_resource path="res://assets/filter.png" type="Texture" id=4]
[ext_resource path="res://assets/areYouSure.png" type="Texture" id=5]
[ext_resource path="res://assets/Sounds/guiClick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Sounds/guiExitClick.wav" type="AudioStream" id=7]

[node name="pause" type="Node2D"]
pause_mode = 2
z_index = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="filter" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 1.5072
margin_top = -1.50732
margin_right = 1281.51
margin_bottom = 718.493
rect_scale = Vector2( 0.795878, 0.841152 )
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 631.794
margin_top = 189.774
margin_right = 671.794
margin_bottom = 229.774
rect_scale = Vector2( 5.42894, 1.88137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save&exit" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 631.792
margin_top = 402.415
margin_right = 852.792
margin_bottom = 484.415
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 633.0
margin_top = 294.0
margin_right = 851.0
margin_bottom = 376.0
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 84.0
margin_top = 446.0
margin_right = 302.0
margin_bottom = 529.0
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="pauseBars" type="TextureRect" parent="CanvasLayer2"]
margin_left = 941.0
margin_top = 26.0
margin_right = 1014.0
margin_bottom = 114.0
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 5

[node name="back" type="TextureRect" parent="CanvasLayer3"]
visible = false
margin_right = 1284.0
margin_bottom = 720.0
rect_scale = Vector2( 0.796, 0.841 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes" type="TextureButton" parent="CanvasLayer3"]
visible = false
margin_left = 121.0
margin_top = 454.0
margin_right = 290.0
margin_bottom = 543.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="TextureButton" parent="CanvasLayer3"]
visible = false
margin_left = 730.0
margin_top = 455.0
margin_right = 899.0
margin_bottom = 541.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xR" type="TextureButton" parent="CanvasLayer3"]
visible = false
margin_left = 950.0
margin_top = 25.0
margin_right = 992.0
margin_bottom = 73.0

[node name="guiClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="guiExit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="hide" from="CanvasLayer/back" to="." method="_on_back_hide"]
[connection signal="pressed" from="CanvasLayer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/save&exit" to="." method="_on_saveexit_pressed"]
[connection signal="pressed" from="CanvasLayer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/reset" to="." method="_on_reset_pressed"]
[connection signal="gui_input" from="CanvasLayer2/pauseBars" to="." method="_on_pauseBars_gui_input"]
[connection signal="pressed" from="CanvasLayer3/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasLayer3/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="CanvasLayer3/xR" to="." method="_on_xR_pressed"]
